# CCoscope

./: .gitignore  CMakeLists.txt  README.md
common/: common_types.h
examples/: abs.cco  arith.cco  break.cco  carpet.cco  complex.cco  complex2.cco  complex3.cco  complex_arith.cco  continue.cco  continue.ll  errors.cco  fib.cco  forloop1.cco  gcd.cco  gcd2.cco  gcd3.cco  gcd_main.cco  implicit.cco  implicit_call.cco  passingargs.cco  pow.cco  reftest.cco  scope.cco  simple.cco  simple2.cco  simple3.cco  simple4.cco  simple5.cco  simple6.cco  simple7.cco  sqrt.cco  sqrt_main.cco  string1.cco  string2.cco  types.cco  vars_anywhere.cco
libcco/: CMakeLists.txt  complex.c  complex.h  conversions.cpp  conversions.h  print.c  print.cpp  print.h  string.c  string.cpp  string.h
src/: CMakeLists.txt  calculator.m  cast.h  codegencontext.cpp  codegencontext.h  compiler.cpp  compiler.h  conversions.h  grammar.m  lexer.lex  main.cpp  proxy.h  tokenizer.cpp  tokenizer.h  tokens.lex  tree.cpp  tree.h  typechecking.cpp  typechecking.h  typematcher.cpp  typematcher.h  types.cpp  types.h  utils.cpp  utils.h
src/ast/: ast.h  codegen.cpp  tree.h  typecheck.cpp
src/misc/: proxy.h
src/parser/: grammar.m  lexer.lex  tokenizer.cpp  tokenizer.h
src/parsing/: grammar.m  lexer.lex  tokenizer.cpp  tokenizer.h
src/tree/: codegen.cpp  tree.cpp  typecheck.cpp
src/types/: codegen.cpp  conversion.h  conversions.cpp  conversions.h  toLLVMs.cpp  typematcher.cpp  typematcher.h  types.cpp  types.h
src/utils/: proxy.h
src/world/: codegencontext.cpp  codegencontext.h  factory.cpp
